fetching data from API pass to a table

--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Api Data in Table </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-</head>
+
+    <style>
+      img{
+        width:100px;
+      }
+    </style>
+
+  </head>
 <body>
     <h1 class="text-center">Storing API data in table</h1>
 
@@ -19,7 +26,7 @@
                 <th scope="col">Image</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="table_body" >
               <tr>
                 <td>Name</td>
                 <td>Mark</td>
